@@ -93,6 +93,7 @@
 // extern variables
 extern bool         cdecl_initialized;  ///< Initialized (read conf. file)?
 extern bool         cdecl_interactive;  ///< Interactive (connected to a tty)?
+extern bool         cdecl_is_testing;   ///< Is **cdecl** being tested?
 extern char const  *me;                 ///< Program name.
 
 ////////// extern functions ///////////////////////////////////////////////////
