@@ -24,6 +24,7 @@
 #define P_MACRO_H_INLINE _GL_EXTERN_INLINE
 /// @endcond
 #include "p_macro.h"
+#include "cdecl.h"
 #include "c_lang.h"
 #include "color.h"
 #include "dump.h"
@@ -492,6 +493,8 @@ static bool check_macro_params( p_param_list_t const *param_list ) {
  * @sa #get___TIME___str()
  */
 static char const* get___DATE___str( void ) {
+  if ( cdecl_is_testing )
+    return "Sep 09 1941";
   static char buf[ sizeof( "MMM DD YYYY" ) ];
   time_t const now = time( /*tloc=*/NULL );
   STRFTIME( buf, sizeof buf, "%b %e %Y", localtime( &now ) );
@@ -508,6 +511,8 @@ static char const* get___DATE___str( void ) {
  * @sa #get___DATE___str()
  */
 static char const* get___TIME___str( void ) {
+  if ( cdecl_is_testing )
+    return "12:34:56";
   static char buf[ sizeof( "hh:mm:ss" ) ];
   time_t const now = time( /*tloc=*/NULL );
   STRFTIME( buf, sizeof buf, "%H:%M:%S", localtime( &now ) );
